--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,19 +4,14 @@
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "32x64 16x32 12x24 8x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "tad-head-big.png",
       "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
+      "sizes": "32x64"
+   }
   ],
   "start_url": ".",
   "display": "standalone",
